<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/detail_view_container"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:gravity="bottom">

    <android.support.v7.widget.CardView
        android:id="@+id/region_view"
        android:layout_gravity="center_horizontal|top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        android:layout_margin="8dp"
        tools:context=".view.detail.CountryDetailFragment"
        android:focusableInTouchMode="false"
        >
        <!--tools:showIn="@layout/activity_country_detail"-->


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/country_name_margin"
            android:paddingTop="24dp"
            android:paddingBottom="16dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/textView_region_title"
                    android:id="@+id/textView_region_title"
                    android:textStyle="bold"
                    android:textSize="22sp"
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"/>

                <FrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Europe"
                        android:id="@+id/region_button"
                        style="@style/Base.Widget.AppCompat.Button.Colored"
                        android:layout_gravity="center_vertical"
                        android:paddingLeft="24dp"
                        android:paddingRight="24dp"/>
                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/detail_vertical_spacing">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/textView_longlat_title"
                    android:id="@+id/textView"
                    android:textStyle="bold"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="89/91"
                    android:id="@+id/textView_lat_long"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/textView_timezone_title"
                    android:id="@+id/textView_timezones_title"
                    android:textStyle="bold"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="UTC+04:30 -           UTC+06:30"
                    android:id="@+id/textView_timezones"
                    android:layout_weight="1"/>
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/detail_view"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp"
        android:layout_margin="8dp"
        tools:context=".view.detail.CountryDetailFragment"
        android:focusableInTouchMode="false"
        >
        <!--tools:showIn="@layout/activity_country_detail"-->

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingLeft="@dimen/country_name_margin"
            android:baselineAligned="false">

            <LinearLayout
                android:id="@+id/secondCardFirstColumn"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/textView_subRegion_title"
                    android:id="@+id/textView_subregion_title"
                    android:textStyle="bold"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="South Europe"
                    android:id="@+id/textView_sub_region"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/textView_capital_title"
                    android:id="@+id/textView_capital_title"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/detail_vertical_spacing"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="Athens"
                    android:id="@+id/textView_capital"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/textView_currency_title"
                    android:id="@+id/textView_currency_title"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/detail_vertical_spacing"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="Euro"
                    android:id="@+id/textView_currency"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/textView_population_title"
                    android:id="@+id/textView_population_title"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="1000"
                    android:id="@+id/textView_population"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/textView_area_title"
                    android:id="@+id/textView_area_title"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/detail_vertical_spacing"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="100"
                    android:id="@+id/textView_area"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/textView_gini_title"
                    android:id="@+id/textView_gini_title"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/detail_vertical_spacing"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="36"
                    android:id="@+id/textView_gini"/>

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>



    <android.support.v7.widget.CardView
        card_view:cardCornerRadius="4dp"

        android:id="@+id/borders_view"
        android:layout_gravity="center_horizontal|top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:focusableInTouchMode="false"
        tools:context=".view.detail.CountryDetailFragment">
        <!--tools:showIn="@layout/activity_country_detail"-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/textView_borders_title"
            android:id="@+id/textView_borders_title"
            android:textStyle="bold"
            android:paddingLeft="@dimen/country_name_margin"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:textSize="22sp"/>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:id="@+id/borders_linear_layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="6dp"
        android:paddingRight="6dp">
    </LinearLayout>
</LinearLayout>

